Fixed horizontal scroll due to margin-left, that should be padding-left on mai-sidenav-shift.

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@ html, body {
 }
 
 .mai-sidenav-shift {
-    margin-left: var(--sidenav-width);
+    padding-left: var(--sidenav-width);
 }
 
 /*********/
